# rust-todo-k8s

./: .gitignore  .gitmodules  LICENSE  README.md
app/: .env  .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
app/.sqlx/: query-034125cb40f0c2fdf7caa473d96b3170e965d395d67be79bd355389c15dc58d5.json  query-0d8a47eca9cf7e824df59d036f8a230e44fd308f3736899dba07beb45b4bcee2.json  query-164e23174d9ce9fc255d23275c36646ec12a52705f67dfea84bc972ca318953b.json  query-18565baea94af56976f7e0e6e9ff6c0a3f65b00207ee428cfc63b46293e07c1d.json  query-2816307a77f31b13bea41067305824baa13ed85c15785e971df7c35af3366d62.json  query-2b2b7c02f8895de00f1f57941a417e7688c14a0269e94cc638298bf61224771b.json  query-3a4cc57c7be251f7727e58088d2722f72ac77181bc4c36bc22e37e2167e4ab94.json  query-40d40537be5f2c96ab3aaabc49e6d4c37d7ea037278aaebc46b2ed72bafa1be7.json  query-4ba3d39d590b3c695e614780f90ab649a5d4e0f0f44091124afead9906349e4e.json  query-5110efa87fc3ff1be1230a6d8e6423272442420296c3dbf038f708cec88f3f93.json  query-52f71556732870f4968c1edcc99e3831c7b361a7423af2921dee957e19a2f1c2.json  query-5a5e38d33cd6cc958586a369c63a423067fe2a340c31c9c04d53dd97f8677213.json  query-5e89c98f245759a1050f4dd38d1281d726261d3f04d63a9914d2bf891e71ad71.json  query-686b276d2ee346c7de03136d8287758d8cc0a4d68ecb1c20389759b4fb924f94.json  query-6a3993843a942387370b00300a64b460ef68bfd58cda3eb51043a2a580471a2b.json  query-7cef6f09d49a1a8d68f38a24799d152a8f589070504b4fe9445c7412522bfead.json  query-8076542623047c604eeb18f5d8b1e6cf7985d5ba705f1b50813f2261621a0d5a.json  (+15 more)
app/src/: main.rs  models.rs  (+1 more)
(+20 files in other folders)
